--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -24,10 +24,15 @@ on:
                 required: false
                 default: true
             run-coverage:
-                description: Run coverage and upload to Codecov
+                description: Run coverage
                 type: boolean
                 required: false
                 default: true
+            upload-coverage:
+                description: Upload coverage to Codecov
+                type: boolean
+                required: false
+                default: false
             run-build:
                 description: Build package
                 type: boolean
@@ -109,7 +114,7 @@ jobs:
               run: uv run pytest --cov=src --cov-report=term-missing --cov-report=xml
 
             - name: Upload coverage to Codecov
-              if: inputs.run-coverage && matrix.python-version == fromJSON(inputs.python-versions)[0]
+              if: inputs.run-coverage && inputs.upload-coverage && matrix.python-version == fromJSON(inputs.python-versions)[0]
               uses: codecov/codecov-action@v4
               with:
                   files: ./coverage.xml
