fix: remove permissions block from reusable release workflow
Reusable workflows cannot grant permissions to callers.
Callers must explicitly set 'permissions: contents: write' or 'permissions: inherit'.

Resolves permission denied error when creating GitHub releases.

--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -14,8 +14,8 @@ on:
                 required: false
                 default: true
 
-permissions:
-    contents: write # Required to create GitHub releases
+# Note: Caller workflow must set 'permissions: contents: write' or 'permissions: inherit'
+# to allow GitHub release creation
 
 jobs:
     release:
