fix: pass GITLAB_API_TOKEN secret through reusable workflow
Reusable workflows must explicitly declare secrets they accept.
Without this, setup-uv-gitlab-registry-action cannot create .pypirc
for twine authentication.

Added:
- secrets.GITLAB_API_TOKEN (required input)
- Callers must pass: secrets: { GITLAB_API_TOKEN: ${{ secrets.GITLAB_API_TOKEN }} }

--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -13,6 +13,10 @@ on:
                 type: boolean
                 required: false
                 default: true
+        secrets:
+            GITLAB_API_TOKEN:
+                description: GitLab API token for package publishing
+                required: true
 
 # Note: Caller workflow must set 'permissions: contents: write' or 'permissions: inherit'
 # to allow GitHub release creation
@@ -56,13 +60,8 @@ jobs:
                     uv lock
                   fi
 
-            - name: Download build artifacts
-              uses: actions/download-artifact@v4
-              with:
-                  name: dist
-                  path: dist/
-                  github-token: ${{ secrets.GITHUB_TOKEN }}
-                  run-id: ${{ github.event.workflow_run.id }}
+            - name: Build package
+              run: uvx nox -s build
 
             - name: Publish to GitLab (nox)
               if: ${{ inputs.use-nox-publish }}
