--- a/.github/actions/setup-ews-ci/action.yml
+++ b/.github/actions/setup-ews-ci/action.yml
@@ -17,6 +17,22 @@ inputs:
     description: Run uv sync to install dependencies
     required: false
     default: "true"
+  setup-ews-config:
+    description: Create ~/.config/ews/*.toml for packages that need auth (GitHub, Ammonit-OR, Windcube-insights)
+    required: false
+    default: "true"
+  github-token:
+    description: GitHub token for private repo access (defaults to GITHUB_TOKEN)
+    required: false
+    default: ""
+  ammonit-or-pwd:
+    description: Password for Ammonit OR access
+    required: false
+    default: ""
+  windcube-insights-pwd:
+    description: Password for Windcube Insights access
+    required: false
+    default: ""
 
 runs:
   using: composite
@@ -29,6 +45,61 @@ runs:
     - name: Install Python
       shell: bash
       run: uv python install ${{ inputs.python-version }}
+
+    - name: Setup EWS config for EWS packages
+      if: inputs.setup-ews-config == 'true'
+      shell: bash
+      env:
+        GH_TOKEN: ${{ inputs.github-token }}
+        AMMONIT_OR_PWD: ${{ inputs.ammonit-or-pwd }}
+        WINDCUBE_INSIGHTS_PWD: ${{ inputs.windcube-insights-pwd }}
+      run: |
+        mkdir -p ~/.config/ews/dataset_registries
+        mkdir -p ~/.config/ews/config
+        
+        # Use provided tokens/passwords (already set as env vars above)
+        # GH_TOKEN comes from inputs.github-token, with fallback to GITHUB_TOKEN in the shell
+        TOKEN="${GH_TOKEN:-${GITHUB_TOKEN}}"
+        
+        if [ -n "$TOKEN" ]; then
+          cat > ~/.config/ews/config/github.toml <<EOF
+        [github]
+        username = "${{ github.actor }}"
+        email = "noreply@ews-consulting.com"
+        token = "$TOKEN"
+        EOF
+          chmod 600 ~/.config/ews/config/github.toml
+          echo "✅ Created ~/.config/ews/config/github.toml"
+        else
+          echo "⚠️  No GitHub token available, skipping config creation"
+        fi
+        
+        if [ -n "$AMMONIT_OR_PWD" ]; then
+          cat > ~/.config/ews/config/ammonit-or.toml <<EOF
+          [ammonit-or]
+          email = "wm@ews-consulting.com"
+          password = "$AMMONIT_OR_PWD"
+        EOF
+          chmod 600 ~/.config/ews/config/ammonit-or.toml
+          echo "✅ Created ~/.config/ews/config/ammonit-or.toml"
+        else
+          echo "⚠️  No Ammonit OR password available, skipping config creation"
+        fi
+        
+        if [ -n "$WINDCUBE_INSIGHTS_PWD" ]; then
+          cat > ~/.config/ews/config/windcube-insights.toml <<EOF
+          [windcube-insights]
+          email = "wm@ews-consulting.at"
+          password = "$WINDCUBE_INSIGHTS_PWD"
+        EOF
+          chmod 600 ~/.config/ews/config/windcube-insights.toml
+          echo "✅ Created ~/.config/ews/config/windcube-insights.toml"
+        else
+          echo "⚠️  No Windcube Insights password available, skipping config creation"
+        fi
+
+        # Compatibility with old tests (we transitioned to ~/.config/ews/config like /etc/ews/config)
+        cp ~/.config/ews/config/*.toml ~/.config/ews/
 
     - name: Setup GitLab Package Registry
       uses: EWS-Consulting-Public/setup-uv-gitlab-registry-action@v1
