--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1,151 +1,160 @@
 name: CI
 
 on:
-    workflow_call:
-        inputs:
-            python-versions:
-                description: JSON array of Python versions to test (e.g. '["3.12", "3.13"]')
-                type: string
-                required: false
-                default: '["3.12"]'
-            lint-python-version:
-                description: Python version for lint job
-                type: string
-                required: false
-                default: "3.12"
-            run-lint:
-                description: Run linting checks
-                type: boolean
-                required: false
-                default: true
-            run-tests:
-                description: Run tests
-                type: boolean
-                required: false
-                default: true
-            run-coverage:
-                description: Run coverage
-                type: boolean
-                required: false
-                default: true
-            upload-coverage:
-                description: Upload coverage to Codecov
-                type: boolean
-                required: false
-                default: false
-            run-build:
-                description: Build package
-                type: boolean
-                required: false
-                default: true
-            use-nox-build:
-                description: Use 'uvx nox -s build' instead of 'uv build'
-                type: boolean
-                required: false
-                default: true
-            upload-artifacts:
-                description: Upload build artifacts
-                type: boolean
-                required: false
-                default: true
+  workflow_call:
+    inputs:
+      python-versions:
+        description: JSON array of Python versions to test (e.g. '["3.12", "3.13"]')
+        type: string
+        required: false
+        default: '["3.12"]'
+      lint-python-version:
+        description: Python version for lint job
+        type: string
+        required: false
+        default: "3.12"
+      run-lint:
+        description: Run linting checks
+        type: boolean
+        required: false
+        default: true
+      run-tests:
+        description: Run tests
+        type: boolean
+        required: false
+        default: true
+      run-coverage:
+        description: Run coverage
+        type: boolean
+        required: false
+        default: true
+      upload-coverage:
+        description: Upload coverage to Codecov
+        type: boolean
+        required: false
+        default: false
+      run-build:
+        description: Build package
+        type: boolean
+        required: false
+        default: true
+      use-nox-build:
+        description: Use 'uvx nox -s build' instead of 'uv build'
+        type: boolean
+        required: false
+        default: true
+      upload-artifacts:
+        description: Upload build artifacts
+        type: boolean
+        required: false
+        default: true
 
 jobs:
-    check-skip:
-        runs-on: ubuntu-latest
-        outputs:
-            should-skip: ${{ steps.check.outputs.skip }}
-        steps:
-            - name: Check if should skip
-              id: check
-              run: |
-                  # Skip CI on main branch if commit is a version bump (tag CI will run instead)
-                  if [[ "${{ github.ref }}" == "refs/heads/main" ]] && \
-                     [[ "${{ github.event.head_commit.message }}" == "bump version to"* ]]; then
-                    echo "skip=true" >> $GITHUB_OUTPUT
-                    echo "Skipping CI for version bump commit (will run on tag)"
-                  else
-                    echo "skip=false" >> $GITHUB_OUTPUT
-                  fi
+  check-skip:
+    runs-on: ubuntu-latest
+    outputs:
+      should-skip: ${{ steps.check.outputs.skip }}
+    steps:
+      - name: Check if should skip
+        id: check
+        run: |
+          # Skip CI on main branch if commit is a version bump (tag CI will run instead)
+          if [[ "${{ github.ref }}" == "refs/heads/main" ]] && \
+             [[ "${{ github.event.head_commit.message }}" == "bump version to"* ]]; then
+            echo "skip=true" >> $GITHUB_OUTPUT
+            echo "Skipping CI for version bump commit (will run on tag)"
+          else
+            echo "skip=false" >> $GITHUB_OUTPUT
+          fi
 
-    lint:
-        name: Lint (ruff)
-        runs-on: ubuntu-latest
-        needs: check-skip
-        if: needs.check-skip.outputs.should-skip != 'true' && inputs.run-lint
-        steps:
-            - uses: actions/checkout@v4
+  lint:
+    name: Lint (ruff)
+    runs-on: ubuntu-latest
+    needs: check-skip
+    if: needs.check-skip.outputs.should-skip != 'true' && inputs.run-lint
+    steps:
+      - uses: actions/checkout@v4
 
-            - uses: EWS-Consulting-Public/ews-ci-action/.github/actions/setup-ews-ci@v1
-              with:
-                  python-version: ${{ inputs.lint-python-version }}
-                  gitlab-token: ${{ vars.GITLAB_API_READ_TOKEN }}
-                  install-dependencies: "true"
+      - uses: ./.github/actions/setup-ews-ci
+        with:
+          python-version: ${{ inputs.lint-python-version }}
+          gitlab-token: ${{ vars.GITLAB_API_READ_TOKEN }}
+          install-dependencies: "true"
+          github-token: ${{ secrets.GITHUB_TOKEN }}
+          ammonit-or-pwd: ${{ secrets.AMMONIT_OR_PASSWORD }}
+          windcube-insights-pwd: ${{ secrets.WINDCUBE_INSIGHTS_PASSWORD }}
 
-            - name: Run ruff check
-              run: uv run ruff check .
+      - name: Run ruff check
+        run: uv run ruff check .
 
-            - name: Run ruff format check
-              run: uv run ruff format --check .
+      - name: Run ruff format check
+        run: uv run ruff format --check .
 
-    test:
-        name: Test (Python ${{ matrix.python-version }})
-        runs-on: ubuntu-latest
-        needs: check-skip
-        if: needs.check-skip.outputs.should-skip != 'true' && inputs.run-tests
-        strategy:
-            fail-fast: false
-            matrix:
-                python-version: ${{ fromJSON(inputs.python-versions) }}
-        steps:
-            - uses: actions/checkout@v4
+  test:
+    name: Test (Python ${{ matrix.python-version }})
+    runs-on: ubuntu-latest
+    needs: check-skip
+    if: needs.check-skip.outputs.should-skip != 'true' && inputs.run-tests
+    strategy:
+      fail-fast: false
+      matrix:
+        python-version: ${{ fromJSON(inputs.python-versions) }}
+    steps:
+      - uses: actions/checkout@v4
 
-            - uses: EWS-Consulting-Public/ews-ci-action/.github/actions/setup-ews-ci@v1
-              with:
-                  python-version: ${{ matrix.python-version }}
-                  gitlab-token: ${{ vars.GITLAB_API_READ_TOKEN }}
-                  install-dependencies: "true"
+      - uses: ./.github/actions/setup-ews-ci
+        with:
+          python-version: ${{ matrix.python-version }}
+          gitlab-token: ${{ vars.GITLAB_API_READ_TOKEN }}
+          install-dependencies: "true"
+          github-token: ${{ secrets.GITHUB_TOKEN }}
+          ammonit-or-pwd: ${{ secrets.AMMONIT_OR_PASSWORD }}
+          windcube-insights-pwd: ${{ secrets.WINDCUBE_INSIGHTS_PASSWORD }}
 
-            - name: Run tests
-              if: ${{ !inputs.run-coverage }}
-              run: uv run pytest
+      - name: Run tests
+        if: ${{ !inputs.run-coverage }}
+        run: uv run pytest
 
-            - name: Run tests with coverage
-              if: ${{ inputs.run-coverage }}
-              run: uv run pytest --cov=src --cov-report=term-missing --cov-report=xml
+      - name: Run tests with coverage
+        if: ${{ inputs.run-coverage }}
+        run: uv run pytest --cov=src --cov-report=term-missing --cov-report=xml
 
-            - name: Upload coverage to Codecov
-              if: inputs.run-coverage && inputs.upload-coverage && matrix.python-version == fromJSON(inputs.python-versions)[0]
-              uses: codecov/codecov-action@v4
-              with:
-                  files: ./coverage.xml
-                  fail_ci_if_error: false
+      - name: Upload coverage to Codecov
+        if: inputs.run-coverage && inputs.upload-coverage && matrix.python-version == fromJSON(inputs.python-versions)[0]
+        uses: codecov/codecov-action@v4
+        with:
+          files: ./coverage.xml
+          fail_ci_if_error: false
 
-    build:
-        name: Build package
-        runs-on: ubuntu-latest
-        needs: [check-skip, lint, test]
-        if: needs.check-skip.outputs.should-skip != 'true' && inputs.run-build
-        steps:
-            - uses: actions/checkout@v4
+  build:
+    name: Build package
+    runs-on: ubuntu-latest
+    needs: [check-skip, lint, test]
+    if: needs.check-skip.outputs.should-skip != 'true' && inputs.run-build
+    steps:
+      - uses: actions/checkout@v4
 
-            - uses: EWS-Consulting-Public/ews-ci-action/.github/actions/setup-ews-ci@v1
-              with:
-                  python-version: ${{ inputs.lint-python-version }}
-                  gitlab-token: ${{ vars.GITLAB_API_READ_TOKEN }}
-                  install-dependencies: "true"
+      - uses: ./.github/actions/setup-ews-ci
+        with:
+          python-version: ${{ inputs.lint-python-version }}
+          gitlab-token: ${{ vars.GITLAB_API_READ_TOKEN }}
+          install-dependencies: "true"
+          github-token: ${{ secrets.GITHUB_TOKEN }}
+          ammonit-or-pwd: ${{ secrets.AMMONIT_OR_PASSWORD }}
+          windcube-insights-pwd: ${{ secrets.WINDCUBE_INSIGHTS_PASSWORD }}
 
-            - name: Build package (nox)
-              if: ${{ inputs.use-nox-build }}
-              run: uvx nox -s build
+      - name: Build package (nox)
+        if: ${{ inputs.use-nox-build }}
+        run: uvx nox -s build
 
-            - name: Build package (uv)
-              if: ${{ !inputs.use-nox-build }}
-              run: uv build --wheel
+      - name: Build package (uv)
+        if: ${{ !inputs.use-nox-build }}
+        run: uv build --wheel
 
-            - name: Upload build artifacts
-              if: inputs.upload-artifacts
-              uses: actions/upload-artifact@v4
-              with:
-                  name: dist
-                  path: dist/
-                  retention-days: 7
+      - name: Upload build artifacts
+        if: inputs.upload-artifacts
+        uses: actions/upload-artifact@v4
+        with:
+          name: dist
+          path: dist/
+          retention-days: 7
