--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -75,7 +75,7 @@ jobs:
     steps:
       - uses: actions/checkout@v4
 
-      - uses: ./.github/actions/setup-ews-ci
+      - uses: EWS-Consulting-Public/ews-ci-action/.github/actions/setup-ews-ci@v1
         with:
           python-version: ${{ inputs.lint-python-version }}
           gitlab-token: ${{ vars.GITLAB_API_READ_TOKEN }}
@@ -99,7 +99,7 @@ jobs:
     steps:
       - uses: actions/checkout@v4
 
-      - uses: ./.github/actions/setup-ews-ci
+      - uses: EWS-Consulting-Public/ews-ci-action/.github/actions/setup-ews-ci@v1
         with:
           python-version: ${{ matrix.python-version }}
           gitlab-token: ${{ vars.GITLAB_API_READ_TOKEN }}
@@ -128,7 +128,7 @@ jobs:
     steps:
       - uses: actions/checkout@v4
 
-      - uses: ./.github/actions/setup-ews-ci
+      - uses: EWS-Consulting-Public/ews-ci-action/.github/actions/setup-ews-ci@v1
         with:
           python-version: ${{ inputs.lint-python-version }}
           gitlab-token: ${{ vars.GITLAB_API_READ_TOKEN }}
