feat: consolidate GitLab auth setup into single composite action
- Merged setup-gitlab-credentials into setup-ews-ci composite action
- Extract gitlab_package_registry_url from EWS_CREDENTIALS JSON
- Configure .netrc, uv.toml, and .pypirc with dynamic GitLab URL
- Add ews-credentials-keys input to reusable workflows (ci.yml, release.yml)
- Remove hardcoded GitLab fallback URLs
- Use github.token for GitHub auth (no need to pass GITHUB_TOKEN)
- Create EWS config files for github, ammonit-or, windcube-insights

Breaking changes:
- Reusable workflows now require ews-credentials-keys input (pass via with:)
- Callers must pass EWS_CREDENTIALS_KEYS as repository variable via with:
- Obsolete gitlab-token input removed (now extracted from EWS_CREDENTIALS)

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -48,9 +48,14 @@ on:
         type: boolean
         required: false
         default: true
+      ews-credentials-keys:
+        description: "JSON array of expected credential keys for validation (optional)"
+        type: string
+        required: false
+        default: ""
     secrets:
       EWS_CREDENTIALS:
-        description: 'JSON object with all EWS credentials (github_token, gitlab_api_token, gitlab_api_read_token, gitlab_package_registry_url, ammonit_or_password, windcube_insights_password)'
+        description: "JSON object with all EWS credentials (gitlab_api_token, gitlab_api_read_token, gitlab_package_registry_url, ammonit_or_password, windcube_insights_password)"
         required: false
 
 jobs:
@@ -82,9 +87,9 @@ jobs:
       - uses: EWS-Consulting-Public/ews-ci-action/.github/actions/setup-ews-ci@v1
         with:
           python-version: ${{ inputs.lint-python-version }}
-          gitlab-token: ${{ vars.GITLAB_API_READ_TOKEN }}
-          install-dependencies: "true"
+          install-dependencies: "false"
           ews-credentials: ${{ secrets.EWS_CREDENTIALS }}
+          ews-credentials-keys: ${{ inputs.ews-credentials-keys }}
 
       - name: Run ruff check
         run: uv run ruff check .
@@ -107,9 +112,9 @@ jobs:
       - uses: EWS-Consulting-Public/ews-ci-action/.github/actions/setup-ews-ci@v1
         with:
           python-version: ${{ matrix.python-version }}
-          gitlab-token: ${{ vars.GITLAB_API_READ_TOKEN }}
           install-dependencies: "true"
           ews-credentials: ${{ secrets.EWS_CREDENTIALS }}
+          ews-credentials-keys: ${{ inputs.ews-credentials-keys }}
 
       - name: Run tests
         if: ${{ !inputs.run-coverage }}
@@ -137,9 +142,9 @@ jobs:
       - uses: EWS-Consulting-Public/ews-ci-action/.github/actions/setup-ews-ci@v1
         with:
           python-version: ${{ inputs.lint-python-version }}
-          gitlab-token: ${{ vars.GITLAB_API_READ_TOKEN }}
           install-dependencies: "true"
           ews-credentials: ${{ secrets.EWS_CREDENTIALS }}
+          ews-credentials-keys: ${{ inputs.ews-credentials-keys }}
 
       - name: Build package (nox)
         if: ${{ inputs.use-nox-build }}
