--- a/.github/actions/setup-ews-ci/action.yml
+++ b/.github/actions/setup-ews-ci/action.yml
@@ -6,23 +6,16 @@ inputs:
     description: Python version to install
     required: false
     default: "3.12"
-  gitlab-token:
-    description: GitLab API token for package registry access
-    required: true
-  gitlab-project-id:
-    description: GitLab project ID for package registry
-    required: false
-    default: "75984310"
   install-dependencies:
     description: Run uv sync to install dependencies
     required: false
     default: "true"
-  setup-ews-config:
-    description: Create ~/.config/ews/*.toml for packages that need auth (auto-detects from environment)
-    required: false
-    default: "true"
   ews-credentials:
-    description: 'JSON object with all EWS credentials (e.g., {"github_token": "ghp_...", "gitlab_api_token": "glpat-...", "gitlab_api_read_token": "glpat-...", "gitlab_package_registry_url": "https://...", "ammonit_or_password": "...", "windcube_insights_password": "..."}). If provided, takes precedence over environment variables.'
+    description: 'Repository secret EWS_CREDENTIALS - JSON object with all EWS credentials {keys: gitlab_api_read_token, gitlab_api_token, gitlab_package_registry_url, ammonit_or_password, windcube_insights_password   }'
+    required: false
+    default: ''
+  ews-credentials-keys:
+    description: 'Repository variable EWS_CREDENTIALS_KEYS - JSON array of expected credential keys for validation'
     required: false
     default: ''
 
@@ -38,48 +31,22 @@ runs:
       shell: bash
       run: uv python install ${{ inputs.python-version }}
 
-    - name: Setup EWS config for EWS packages
-      if: inputs.setup-ews-config == 'true'
+    - name: Setup EWS CI Environment
       shell: bash
       env:
         EWS_CREDENTIALS: ${{ inputs.ews-credentials }}
+        EWS_CREDENTIALS_KEYS: ${{ inputs.ews-credentials-keys }}
+        GITHUB_TOKEN: ${{ github.token }}
       run: |
+        echo "🔧 Setting up EWS CI environment..."
+        
         mkdir -p ~/.config/ews/dataset_registries
         mkdir -p ~/.config/ews/config
+        mkdir -p ~/.config/uv
         
-        # Parse JSON credentials if provided
-        if [ -n "${EWS_CREDENTIALS}" ]; then
-          echo "📦 Parsing EWS credentials from JSON..."
-          
-          # Extract credentials using jq (available in GitHub runners)
-          GITHUB_TOKEN_JSON=$(echo "$EWS_CREDENTIALS" | jq -r '.github_token // empty')
-          GITLAB_API_TOKEN_JSON=$(echo "$EWS_CREDENTIALS" | jq -r '.gitlab_api_token // empty')
-          GITLAB_API_READ_TOKEN_JSON=$(echo "$EWS_CREDENTIALS" | jq -r '.gitlab_api_read_token // empty')
-          GITLAB_PACKAGE_REGISTRY_URL_JSON=$(echo "$EWS_CREDENTIALS" | jq -r '.gitlab_package_registry_url // empty')
-          AMMONIT_OR_PASSWORD_JSON=$(echo "$EWS_CREDENTIALS" | jq -r '.ammonit_or_password // empty')
-          WINDCUBE_INSIGHTS_PASSWORD_JSON=$(echo "$EWS_CREDENTIALS" | jq -r '.windcube_insights_password // empty')
-          
-          # Use JSON values if provided, otherwise fall back to environment variables
-          GITHUB_TOKEN="${GITHUB_TOKEN_JSON:-${GITHUB_TOKEN:-}}"
-          GITLAB_API_TOKEN="${GITLAB_API_TOKEN_JSON:-${GITLAB_API_TOKEN:-}}"
-          GITLAB_API_READ_TOKEN="${GITLAB_API_READ_TOKEN_JSON:-${GITLAB_API_READ_TOKEN:-}}"
-          GITLAB_PACKAGE_REGISTRY_URL="${GITLAB_PACKAGE_REGISTRY_URL_JSON:-${GITLAB_PACKAGE_REGISTRY_URL:-}}"
-          AMMONIT_OR_PASSWORD="${AMMONIT_OR_PASSWORD_JSON:-${AMMONIT_OR_PASSWORD:-}}"
-          WINDCUBE_INSIGHTS_PASSWORD="${WINDCUBE_INSIGHTS_PASSWORD_JSON:-${WINDCUBE_INSIGHTS_PASSWORD:-}}"
-          
-          echo "✅ Credentials loaded from JSON"
-        else
-          echo "📦 Using environment variables for credentials..."
-          # Use environment variables directly
-          GITHUB_TOKEN="${GITHUB_TOKEN:-}"
-          GITLAB_API_TOKEN="${GITLAB_API_TOKEN:-}"
-          GITLAB_API_READ_TOKEN="${GITLAB_API_READ_TOKEN:-}"
-          GITLAB_PACKAGE_REGISTRY_URL="${GITLAB_PACKAGE_REGISTRY_URL:-}"
-          AMMONIT_OR_PASSWORD="${AMMONIT_OR_PASSWORD:-}"
-          WINDCUBE_INSIGHTS_PASSWORD="${WINDCUBE_INSIGHTS_PASSWORD:-}"
-        fi
-        
-        # GitHub token
+        # ============================================================
+        # 1. GitHub token (from runner context)
+        # ============================================================
         if [ -n "${GITHUB_TOKEN}" ]; then
           cat > ~/.config/ews/config/github.toml <<EOF
         [github]
@@ -90,30 +57,85 @@ runs:
           chmod 600 ~/.config/ews/config/github.toml
           echo "✅ Created ~/.config/ews/config/github.toml"
         else
-          echo "⚠️  No GitHub token available, skipping config creation"
+          echo "⚠️  No GitHub token available"
         fi
         
-        # GitLab tokens (for .pypirc)
-        if [ -n "${GITLAB_API_TOKEN}" ] || [ -n "${GITLAB_API_READ_TOKEN}" ]; then
-          GITLAB_URL="${GITLAB_PACKAGE_REGISTRY_URL:-https://gitlab.com/api/v4/projects/75984310/packages/pypi}"
+        # ============================================================
+        # 2. Parse EWS_CREDENTIALS JSON (repository secret)
+        # ============================================================
+        if [ -n "${EWS_CREDENTIALS}" ]; then
+          echo "📦 Parsing EWS_CREDENTIALS JSON..."
           
+          # Extract all credentials using jq
+          GITLAB_API_TOKEN=$(echo "$EWS_CREDENTIALS" | jq -r '.gitlab_api_token // empty')
+          GITLAB_API_READ_TOKEN=$(echo "$EWS_CREDENTIALS" | jq -r '.gitlab_api_read_token // empty')
+          GITLAB_PACKAGE_REGISTRY_URL=$(echo "$EWS_CREDENTIALS" | jq -r '.gitlab_package_registry_url // empty')
+          AMMONIT_OR_PASSWORD=$(echo "$EWS_CREDENTIALS" | jq -r '.ammonit_or_password // empty')
+          WINDCUBE_INSIGHTS_PASSWORD=$(echo "$EWS_CREDENTIALS" | jq -r '.windcube_insights_password // empty')
+          
+          echo "✅ Credentials extracted from JSON"
+        else
+          echo "⚠️  No EWS_CREDENTIALS provided"
+          GITLAB_API_TOKEN=""
+          GITLAB_API_READ_TOKEN=""
+          GITLAB_PACKAGE_REGISTRY_URL=""
+          AMMONIT_OR_PASSWORD=""
+          WINDCUBE_INSIGHTS_PASSWORD=""
+        fi
+        
+        # ============================================================
+        # 3. GitLab Package Registry Setup (.netrc + uv.toml)
+        # ============================================================
+        if [ -n "${GITLAB_API_READ_TOKEN}" ] && [ -n "${GITLAB_PACKAGE_REGISTRY_URL}" ]; then
+          echo "🔐 Configuring GitLab Package Registry..."
+          
+          # Create .netrc for HTTP basic auth (used by uv/pip)
+          cat > ~/.netrc <<EOF
+        machine gitlab.com
+        login __token__
+        password ${GITLAB_API_READ_TOKEN}
+        EOF
+          chmod 600 ~/.netrc
+          echo "✅ Created ~/.netrc for gitlab.com"
+          
+          # Configure uv index with URL from credentials
+          cat > ~/.config/uv/uv.toml <<EOF
+        [[index]]
+        name = "gitlab"
+        url = "${GITLAB_PACKAGE_REGISTRY_URL}/simple"
+        default = false
+        explicit = false
+        authenticate = "always"
+        ignore-error-codes = [403]
+        EOF
+          echo "✅ Configured uv index: gitlab (${GITLAB_PACKAGE_REGISTRY_URL}/simple)"
+        else
+          echo "ℹ️  No GitLab read token or package registry URL, skipping package registry setup"
+        fi
+        
+        # ============================================================
+        # 4. GitLab PyPI Upload (.pypirc for twine)
+        # ============================================================
+        if [ -n "${GITLAB_API_TOKEN}" ] && [ -n "${GITLAB_PACKAGE_REGISTRY_URL}" ]; then
           cat > ~/.pypirc <<EOF
         [distutils]
         index-servers =
             gitlab
         
         [gitlab]
-        repository = ${GITLAB_URL}
+        repository = ${GITLAB_PACKAGE_REGISTRY_URL}
         username = __token__
-        password = ${GITLAB_API_TOKEN:-${GITLAB_API_READ_TOKEN}}
+        password = ${GITLAB_API_TOKEN}
         EOF
           chmod 600 ~/.pypirc
-          echo "✅ Created ~/.pypirc for GitLab Package Registry"
+          echo "✅ Created ~/.pypirc for GitLab Package Registry publishing (${GITLAB_PACKAGE_REGISTRY_URL})"
         else
-          echo "ℹ️  No GitLab tokens available, skipping .pypirc creation"
+          echo "ℹ️  No GitLab API token or package registry URL, skipping .pypirc creation"
         fi
         
-        # Ammonit-OR password
+        # ============================================================
+        # 5. EWS Package Credentials (Ammonit-OR, Windcube Insights)
+        # ============================================================
         if [ -n "${AMMONIT_OR_PASSWORD}" ]; then
           cat > ~/.config/ews/config/ammonit-or.toml <<EOF
         [ammonit-or]
@@ -123,10 +145,9 @@ runs:
           chmod 600 ~/.config/ews/config/ammonit-or.toml
           echo "✅ Created ~/.config/ews/config/ammonit-or.toml"
         else
-          echo "ℹ️  No Ammonit OR password available, skipping config creation"
+          echo "ℹ️  No Ammonit-OR password"
         fi
         
-        # Windcube Insights password
         if [ -n "${WINDCUBE_INSIGHTS_PASSWORD}" ]; then
           cat > ~/.config/ews/config/windcube-insights.toml <<EOF
         [windcube-insights]
@@ -136,19 +157,15 @@ runs:
           chmod 600 ~/.config/ews/config/windcube-insights.toml
           echo "✅ Created ~/.config/ews/config/windcube-insights.toml"
         else
-          echo "ℹ️  No Windcube Insights password available, skipping config creation"
+          echo "ℹ️  No Windcube Insights password"
         fi
-
-        # Compatibility with old tests (we transitioned to ~/.config/ews/config like /etc/ews/config)
+        
+        # Compatibility: Copy config files to parent directory for old tests
         if ls ~/.config/ews/config/*.toml 1> /dev/null 2>&1; then
           cp ~/.config/ews/config/*.toml ~/.config/ews/
         fi
-
-    - name: Setup GitLab Package Registry
-      uses: EWS-Consulting-Public/setup-uv-gitlab-registry-action@v1
-      with:
-        token: ${{ inputs.gitlab-token }}
-        project-id: ${{ inputs.gitlab-project-id }}
+        
+        echo "✅ EWS CI environment setup complete"
 
     - name: Install dependencies
       if: inputs.install-dependencies == 'true'
