--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -1,159 +1,105 @@
 name: Release
 
 on:
-    workflow_call:
-        inputs:
-            python-version:
-                description: Python version for build
-                type: string
-                required: false
-                default: "3.12"
-            use-nox-publish:
-                description: Use 'uvx nox -s publish' instead of direct twine
-                type: boolean
-                required: false
-                default: true
-        secrets:
-            EWS_CREDENTIALS:
-                description: 'JSON object with all EWS credentials (gitlab_api_token, gitlab_api_read_token, etc.)'
-                required: true
+  workflow_call:
+    inputs:
+      python-version:
+        description: Python version for build
+        type: string
+        required: false
+        default: "3.12"
+      use-nox-publish:
+        description: Use 'uvx nox -s publish' instead of direct twine
+        type: boolean
+        required: false
+        default: true
+      ews-credentials-keys:
+        description: "Repository variable - JSON array of expected credential keys (optional)"
+        type: string
+        required: false
+        default: ""
+    secrets:
+      EWS_CREDENTIALS:
+        description: "Repository secret - JSON object with all EWS credentials"
+        required: true
 
 # Note: Caller workflow must set 'permissions: contents: write' or 'permissions: inherit'
 # to allow GitHub release creation
 
 jobs:
-    release:
-        runs-on: ubuntu-latest
-        # Only run if:
-        # 1. CI workflow completed successfully
-        # 2. Triggered by a tag (version release)
-        if: |
-            github.event.workflow_run.conclusion == 'success' &&
-            startsWith(github.event.workflow_run.head_branch, 'v')
-        steps:
-            - name: Checkout code
-              uses: actions/checkout@v4
-              with:
-                  ref: ${{ github.event.workflow_run.head_branch }}
+  release:
+    runs-on: ubuntu-latest
+    # Only run if:
+    # 1. CI workflow completed successfully
+    # 2. Triggered by a tag (version release)
+    if: |
+      github.event.workflow_run.conclusion == 'success' &&
+      startsWith(github.event.workflow_run.head_branch, 'v')
+    steps:
+      - name: Checkout code
+        uses: actions/checkout@v4
+        with:
+          ref: ${{ github.event.workflow_run.head_branch }}
 
-            - name: Install uv
-              uses: astral-sh/setup-uv@v7
-              with:
-                  enable-cache: true
+      - uses: EWS-Consulting-Public/ews-ci-action/.github/actions/setup-ews-ci@v1
+        with:
+          python-version: ${{ inputs.python-version }}
+          install-dependencies: "false"
+          ews-credentials: ${{ secrets.EWS_CREDENTIALS }}
+          ews-credentials-keys: ${{ inputs.ews-credentials-keys }}
 
-            - name: Set up Python
-              run: uv python install ${{ inputs.python-version }}
+      - name: Generate lock file for release
+        run: |
+          if [ -f uv.lock ]; then
+            echo "📦 Lock file already exists, using committed version"
+          else
+            echo "📦 Generating lock file for reproducible release..."
+            uv lock
+          fi
 
-            - name: Setup GitLab credentials
-              shell: bash
-              env:
-                  EWS_CREDENTIALS: ${{ secrets.EWS_CREDENTIALS }}
-              run: |
-                  # Extract GitLab tokens from JSON credentials
-                  GITLAB_API_TOKEN=$(echo "$EWS_CREDENTIALS" | jq -r '.gitlab_api_token // empty')
-                  GITLAB_API_READ_TOKEN=$(echo "$EWS_CREDENTIALS" | jq -r '.gitlab_api_read_token // empty')
-                  GITLAB_PACKAGE_REGISTRY_URL=$(echo "$EWS_CREDENTIALS" | jq -r '.gitlab_package_registry_url // empty')
-                  
-                  # Use default URL if not provided
-                  GITLAB_URL="${GITLAB_PACKAGE_REGISTRY_URL:-https://gitlab.com/api/v4/projects/75984310/packages/pypi}"
-                  
-                  # Create .pypirc for twine
-                  cat > ~/.pypirc <<EOF
-                  [distutils]
-                  index-servers =
-                      gitlab
-                  
-                  [gitlab]
-                  repository = ${GITLAB_URL}
-                  username = __token__
-                  password = ${GITLAB_API_TOKEN}
-                  EOF
-                  chmod 600 ~/.pypirc
-                  echo "✅ Created ~/.pypirc for GitLab Package Registry"
-                  
-                  # Create .netrc for uv/pip
-                  cat > ~/.netrc <<EOF
-                  machine gitlab.com
-                  login __token__
-                  password ${GITLAB_API_READ_TOKEN:-${GITLAB_API_TOKEN}}
-                  EOF
-                  chmod 600 ~/.netrc
-                  echo "✅ Created ~/.netrc for GitLab authentication"
+      - name: Build package
+        run: uvx nox -s build
 
-            - name: Setup uv GitLab index
-              shell: bash
-              env:
-                  EWS_CREDENTIALS: ${{ secrets.EWS_CREDENTIALS }}
-              run: |
-                  # Extract read token from JSON
-                  GITLAB_READ_TOKEN=$(echo "$EWS_CREDENTIALS" | jq -r '.gitlab_api_read_token // empty')
-                  
-                  # Configure uv index
-                  mkdir -p ~/.config/uv
-                  cat > ~/.config/uv/uv.toml <<EOF
-                  [[index]]
-                  name = "gitlab"
-                  url = "https://gitlab.com/api/v4/projects/75984310/packages/pypi/simple"
-                  default = false
-                  explicit = false
-                  authenticate = "always"
-                  ignore-error-codes = [403]
-                  EOF
-                  echo "✅ Configured uv GitLab index"
+      - name: Publish to GitLab (nox)
+        if: ${{ inputs.use-nox-publish }}
+        run: uvx nox -s publish
 
-            - name: Generate lock file for release
-              run: |
-                  if [ -f uv.lock ]; then
-                    echo "📦 Lock file already exists, using committed version"
-                  else
-                    echo "📦 Generating lock file for reproducible release..."
-                    uv lock
-                  fi
+      - name: Publish to GitLab (twine)
+        if: ${{ !inputs.use-nox-publish }}
+        shell: bash
+        env:
+          EWS_CREDENTIALS: ${{ secrets.EWS_CREDENTIALS }}
+        run: |
+          GITLAB_API_TOKEN=$(echo "$EWS_CREDENTIALS" | jq -r '.gitlab_api_token // empty')
+          GITLAB_PACKAGE_REGISTRY_URL=$(echo "$EWS_CREDENTIALS" | jq -r '.gitlab_package_registry_url // empty')
 
-            - name: Build package
-              run: uvx nox -s build
+          TWINE_USERNAME=__token__ TWINE_PASSWORD="${GITLAB_API_TOKEN}" \
+          uvx twine upload \
+            --repository-url "${GITLAB_PACKAGE_REGISTRY_URL}" \
+            dist/*.whl
 
-            - name: Publish to GitLab (nox)
-              if: ${{ inputs.use-nox-publish }}
-              run: uvx nox -s publish
+      - name: Create GitHub Release
+        uses: softprops/action-gh-release@v1
+        with:
+          tag_name: ${{ github.event.workflow_run.head_branch }}
+          files: |
+            dist/*
+            uv.lock
+          generate_release_notes: true
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
 
-            - name: Publish to GitLab (twine)
-              if: ${{ !inputs.use-nox-publish }}
-              shell: bash
-              env:
-                  EWS_CREDENTIALS: ${{ secrets.EWS_CREDENTIALS }}
-              run: |
-                  GITLAB_API_TOKEN=$(echo "$EWS_CREDENTIALS" | jq -r '.gitlab_api_token // empty')
-                  GITLAB_PACKAGE_REGISTRY_URL=$(echo "$EWS_CREDENTIALS" | jq -r '.gitlab_package_registry_url // empty')
-                  GITLAB_URL="${GITLAB_PACKAGE_REGISTRY_URL:-https://gitlab.com/api/v4/projects/75984310/packages/pypi}"
-                  
-                  TWINE_USERNAME=__token__ TWINE_PASSWORD="${GITLAB_API_TOKEN}" \
-                  uvx twine upload \
-                    --repository-url "${GITLAB_URL}" \
-                    dist/*.whl
-
-            - name: Create GitHub Release
-              uses: softprops/action-gh-release@v1
-              with:
-                  tag_name: ${{ github.event.workflow_run.head_branch }}
-                  files: |
-                      dist/*
-                      uv.lock
-                  generate_release_notes: true
-              env:
-                  GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-
-            - name: Summary
-              run: |
-                  PACKAGE_NAME=$(grep '^name = ' pyproject.toml | sed 's/name = "\(.*\)"/\1/')
-                  echo "## 🎉 Release Summary" >> $GITHUB_STEP_SUMMARY
-                  echo "" >> $GITHUB_STEP_SUMMARY
-                  echo "- **Version:** ${{ github.event.workflow_run.head_branch }}" >> $GITHUB_STEP_SUMMARY
-                  echo "- **Built files:**" >> $GITHUB_STEP_SUMMARY
-                  ls -1 dist/ | sed 's/^/  - /' >> $GITHUB_STEP_SUMMARY
-                  echo "" >> $GITHUB_STEP_SUMMARY
-                  echo "### 📦 Installation" >> $GITHUB_STEP_SUMMARY
-                  echo '```bash' >> $GITHUB_STEP_SUMMARY
-                  echo "# Install package" >> $GITHUB_STEP_SUMMARY
-                  echo "uv pip install $PACKAGE_NAME" >> $GITHUB_STEP_SUMMARY
-                  echo '```' >> $GITHUB_STEP_SUMMARY
+      - name: Summary
+        run: |
+          PACKAGE_NAME=$(grep '^name = ' pyproject.toml | sed 's/name = "\(.*\)"/\1/')
+          echo "## 🎉 Release Summary" >> $GITHUB_STEP_SUMMARY
+          echo "" >> $GITHUB_STEP_SUMMARY
+          echo "- **Version:** ${{ github.event.workflow_run.head_branch }}" >> $GITHUB_STEP_SUMMARY
+          echo "- **Built files:**" >> $GITHUB_STEP_SUMMARY
+          ls -1 dist/ | sed 's/^/  - /' >> $GITHUB_STEP_SUMMARY
+          echo "" >> $GITHUB_STEP_SUMMARY
+          echo "### 📦 Installation" >> $GITHUB_STEP_SUMMARY
+          echo '```bash' >> $GITHUB_STEP_SUMMARY
+          echo "# Install package" >> $GITHUB_STEP_SUMMARY
+          echo "uv pip install $PACKAGE_NAME" >> $GITHUB_STEP_SUMMARY
+          echo '```' >> $GITHUB_STEP_SUMMARY
