feat: support ews-datasets-loader shared cache in CI
- Set EWS_DATASETS_SYSTEM_CACHE_PATH to writable workspace location
- Create both user and system cache directories
- Ensures tests using cache_location='system' work in CI runners
- System cache: ${{ github.workspace }}/.cache/ews/datasets
- User cache: ~/.cache/ews/datasets

This prevents CI failures when ews-datasets-loader tests request
system cache (which defaults to non-writable /var/cache/ews).

--- a/.github/actions/setup-ews-ci/action.yml
+++ b/.github/actions/setup-ews-ci/action.yml
@@ -37,12 +37,16 @@ runs:
         EWS_CREDENTIALS: ${{ inputs.ews-credentials }}
         EWS_CREDENTIALS_KEYS: ${{ inputs.ews-credentials-keys }}
         GITHUB_TOKEN: ${{ github.token }}
+        # Override system cache to user-writable location in CI
+        EWS_DATASETS_SYSTEM_CACHE_PATH: ${{ github.workspace }}/.cache/ews/datasets
       run: |
         echo "🔧 Setting up EWS CI environment..."
         
         mkdir -p ~/.config/ews/dataset_registries
         mkdir -p ~/.config/ews/config
         mkdir -p ~/.config/uv
+        mkdir -p ~/.cache/ews/datasets
+        mkdir -p ${{ github.workspace }}/.cache/ews/datasets
         
         # ============================================================
         # 1. GitHub token (from runner context)
